force-app/main/default/objects/Launch_Appointment_Times__mdt/Launch_Appointment_Times__mdt.object-meta.xml
<CustomObject>
    <label>Launch Appointment Times</label>
    <pluralLabel>Launch Appointment Times</pluralLabel>
</CustomObject>