force-app/main/default/objects/Launch_Appointment_Times__mdt/fields/Numeric_Sort__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Sort__c</fullName>
    <label>Numeric Sort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>