force-app/main/default/objects/Launch_Appointment_Times__mdt/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9:00 am</fullName>
                <default>true</default>
                <label>9:00 am</label>
            </value>
            <value>
                <fullName>9:30 am</fullName>
            </value>
            <value>
                <fullName>10:00 am</fullName>
            </value>
            <value>
                <fullName>10:30 am</fullName>
            </value>
            <value>
                <fullName>11:00 am</fullName>
            </value>
            <value>
                <fullName>11:30 am</fullName>
            </value>
            <value>
                <fullName>12:00 pm</fullName>
            </value>
            <value>
                <fullName>12:30 pm</fullName>
            </value>
            <value>
                <fullName>3:00 pm</fullName>
            </value>
            <value>
                <fullName>3:30 pm</fullName>
            </value>
            <value>
                <fullName>4:00 pm</fullName>
            </value>
            <value>
                <fullName>4:30 pm</fullName>
            </value>
            <value>
                <fullName>5:00 pm</fullName>
            </value>
            <value>
                <fullName>5:30 pm</fullName>
            </value>
            <value>
                <fullName>1:00 pm</fullName>
                <isActive>false</isActive>
                <label>1:00 pm</label>
            </value>
            <value>
                <fullName>2:00 pm</fullName>
                <isActive>false</isActive>
                <label>2:00 pm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>